--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.5.1",
+    "@react-navigation/drawer": "^6.6.4",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.18",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^7.0.0",
+    "react-native-maps": "^1.7.1",
+    "react-native-permissions": "^3.9.2",
+    "react-native-picker-select": "^8.1.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-screens": "~3.22.0",
+    "react-native-select-dropdown": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
